# qoute-scraper

./: README.md  pyproject.toml  scrap.py
load_to_db/: config.ini  models.py  seed.py
