[tool.poetry]
name = "modul-9"
version = "0.1.0"
description = ""
authors = ["Invil124 <113246425+Invil124@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "modul_9"}]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
mongoengine = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
